scripts/nullness/annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8.txt
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:24: error: [dereference.of.nullable] dereference of possibly-null reference expected
        if (!expected.equals(actual)) throw new AssertionError();
             ^
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:27: error: [dereference.of.nullable] dereference of possibly-null reference expected
        if (!expected.equals(actual)) throw new AssertionError(message);
             ^
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:60: error: [argument] incompatible argument for parameter arg0 of Matcher.matches.
        if (!matcher.matches(actual)) throw new AssertionError(reason);
                             ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:63: error: [argument] incompatible argument for parameter arg0 of Matcher.matches.
        if (!matcher.matches(actual)) throw new AssertionError();
                             ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:69: error: [unboxing.of.nullable] unboxing a possibly-null reference condition
        if (!condition) throw new AssertionError(message);
             ^
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:102: error: [dereference.of.nullable] dereference of possibly-null reference recognizerTags
        return recognizerTags.validate(test.getTags());
               ^
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:30: error: [unboxing.of.nullable] unboxing a possibly-null reference (Boolean)suite.getContext().get("trueCondition")
        Assert.assertTrue("The condition is false",(Boolean)suite.getContext().get("trueCondition"));
                                                   ^
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:38: error: [argument] incompatible argument for parameter str of StringBuilder constructor.
        StringBuilder sb= new StringBuilder(testname);
                                            ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:75: error: [return] incompatible types in return.
        return context;
               ^
  type of expression: @Initialized @Nullable HashMap<@Initialized @NonNull String, @Initialized @NonNull Object>
  method return type: @Initialized @NonNull HashMap<@Initialized @NonNull String, @Initialized @NonNull Object>
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestRunner.java:77: error: [dereference.of.nullable] dereference of possibly-null reference testCreator
        return testCreator.getTest();
               ^
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:18: error: [initialization.fields.uninitialized] the constructor does not initialize fields: throwable, printer
    public XmlPrinter() {
           ^
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:20: error: [method.invocation] call to inicializar() not allowed on the given receiver.
        inicializar();
                   ^
  found   : @UnderInitialization @NonNull XmlPrinter
  required: @Initialized @NonNull XmlPrinter
../annotator/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:85: error: [dereference.of.nullable] dereference of possibly-null reference messsage
        if(!messsage.contains(":")) {
            ^
13 errors
